# replicate-rustls-bug

./: .gitignore  .gitmodules  README.md
certs/: ca-key.pem  ca.csr  ca.json  ca.pem  client-key.pem  client.csr  client.json  server-key.pem  server.csr  server.json  server.pem
go-server/: go.mod  main.go
go-server/data/: config.yml
rustls-client/: Cargo.toml
rustls-client/data/: client-cert.pem  client-key.pem  config.yml
rustls-client/src/: main.rs
