[package]
name = "rustls-client"
version = "0.1.0"
authors = [ "Tanya Verma <tverma@cloudflare.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
log = "0.4"
rustls-pemfile = "0.2.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
tokio = { version = "1.9", features = [ "full" ] }
tokio-rustls = { path = "../tls/tokio-rustls" }
webpki = "0.21"
